changed pricing tables

--- a/indexoriginal.html
+++ b/indexoriginal.html
@@ -215,32 +215,42 @@
     <!--Pricing table-->
     <section id="pricing">
         <div class="container text-center">
-          <h2>Pricing</h2>
+          <h2>Pricing table</h2>
           	<div class="row">
                 <div class="col-sm-4 from-left">
                   <ul class="table nm np">
-                    <li class="title nb">Pay per package</li>
-                    <li class="price nb">$20/package plus shipping</li>
-                    <li>Regular shipping rates apply</li>
-                    <li><a href="#">Click for more info!</a></li>
+                    <li class="title nb">25 days trial</li>
+                    <li class="price nb">$0/mo</li>
+                    <li>Free setup</li>
+                    <li>Unlimited bandwidth</li>
+                    <li>2.0% transaction fee</li>
+                    <li>1 GB Storage</li>
+                    <li>Unlimited concurrent domain</li>
+                    <li><a href="#">Try demo free</a></li>
                   </ul>
                 </div>                
                 <div class="col-sm-4 bottom">
                   <ul class="table nm np">
-                    <li class="title nb">3 packages/month</li>
-                    <li class="price nb">$30/month plus shipping</li>
-                    <li>%15 off shipping rates</li>
-                    
-                    <li><a href="#">Click for more info!</a></li>
+                    <li class="title nb">Pro version</li>
+                    <li class="price nb">$0/mo</li>
+                    <li>Free setup</li>
+                    <li>Unlimited bandwidth</li>
+                    <li>2.0% transaction fee</li>
+                    <li>1 GB Storage</li>
+                    <li>Unlimited concurrent domain</li>
+                    <li><a href="#">Download the app</a></li>
                   </ul>
                 </div>                
                 <div class="col-sm-4 from-right">
                   <ul class="table nm np">
-                    <li class="title nb">6 packages/month</li>
-                    <li class="price nb">$40/month plus shipping</li>
-                    <li>20% off shipping rates</li>
-                    
-                    <li><a href="#">Click for more info!</a></li>
+                    <li class="title nb">Dev version</li>
+                    <li class="price nb">$0/mo</li>
+                    <li>Free setup</li>
+                    <li>Unlimited bandwidth</li>
+                    <li>2.0% transaction fee</li>
+                    <li>1 GB Storage</li>
+                    <li>Unlimited concurrent domain</li>
+                    <li><a href="#">Download the app</a></li>
                   </ul>
                 </div>
         	</div>
