--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     
     <!-- Page Title -->
-    <title>MyLandert - Landing Page</title>
+    <title>Sky Club</title>
     
     <!-- Responsive Metatag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,17 +82,16 @@
 			      <span class="icon-bar"></span>
 			      <span class="icon-bar"></span>
 			    </button>
-			    <a id="logo" class="navbar-brand" href="#"><img src="img/logo.png" alt="My Brand" /></a>
+			    <a id="logo" class="navbar-brand" href="#">SkyClub</a>
 			  </div>
 			  <!-- Collect the nav links, forms, and other content for toggling -->
 			  <div class="collapse navbar-collapse navbar-ex1-collapse nb np">
 			    <ul class="nav navbar-nav">
-			      <li><a href="#slider" class="anchor">Home</a></li>
-			      <li><a href="#features" class="anchor">Features</a></li>
+			      <li><a href="#slider" class="anchor">About</a></li>
+			      <li><a href="#features" class="anchor">Apply</a></li>
 			      <li><a href="#pricing" class="anchor">Pricing</a></li>
-			      <li><a href="#gallery" class="anchor">Gallery</a></li>
-			      <li><a href="#testimonials" class="anchor">Testimonials</a></li>
-			      <li><a href="#myModal" data-toggle="modal">Contact</a></li>
+			      <li><a href="#gallery" class="anchor">Contact</a></li>
+	
 			    </ul>
 			  </div><!-- /.navbar-collapse -->
 			</nav>
@@ -104,8 +103,8 @@
     	<div class="container">
         	<div class="row item">
 				<div class="col-sm-5">
-					<h1>Don't miss the chance to get this awesome app!</h1>
-					<p>Check out our super awesome and mega cool mobile app. We promise you tons of fun and hours of tapping.</p>
+					<h1>Get packages that don't ship to your country!</h1>
+					<p></p>
 					<form  id="newsletter" action="newsletter.php" class="form-inline" role="form">
 					  <div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
