--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" href="../assets/ico/favicon.png">
+    <link href='http://fonts.googleapis.com/css?family=Bad+Script' rel='stylesheet' type='text/css'>
+
+    <style>
+    	#logo{
+    		font-family: 'Bad Script', cursive;
+    		padding-top:25px;
+    		font-size:28px;
+    		color:white;
+    	}
+    	
+
+    </style>
   </head>
   <body>
   	
