fixed typo & changed prices

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <div class="col-sm-4 from-left">
                   <ul class="table nm np">
                     <li class="title nb">Pay per package</li>
-                    <li class="price nb">$20/package plus shipping</li>
+                    <li class="price nb">$15/package plus shipping</li>
                     <li>Regular shipping rates apply</li>
                     <li><a href="#">Click for more info!</a></li>
                   </ul>
@@ -229,7 +229,7 @@
                   <ul class="table nm np">
                     <li class="title nb">3 packages/month</li>
                     <li class="price nb">$30/month plus shipping</li>
-                    <li>%15 off shipping rates</li>
+                    <li>15% off shipping rates</li>
                     
                     <li><a href="#">Click for more info!</a></li>
                   </ul>
@@ -237,7 +237,7 @@
                 <div class="col-sm-4 from-right">
                   <ul class="table nm np">
                     <li class="title nb">6 packages/month</li>
-                    <li class="price nb">$40/month plus shipping</li>
+                    <li class="price nb">$60/month plus shipping</li>
                     <li>20% off shipping rates</li>
                     
                     <li><a href="#">Click for more info!</a></li>
