--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			      <li><a href="#slider" class="anchor">About</a></li>
 			      <li><a href="#features" class="anchor">Apply</a></li>
 			      <li><a href="#pricing" class="anchor">Pricing</a></li>
-			      <li><a href="#gallery" class="anchor">Contact</a></li>
+			      <li><a href="#myModal" data-toggle="modal">Contact</a></li>
 	
 			    </ul>
 			  </div><!-- /.navbar-collapse -->
@@ -427,7 +427,7 @@
     </section>	
     <!-- end Gallery -->       
    
- 	<!-- Testimonials -->	
+ 	<!-- Testimonials 
     <section id="testimonials" class="bottom" >
     	<div class="container text-center">
     		
@@ -609,7 +609,7 @@
     		
     	</div>
     </section>
-    <!-- end Testimonials -->  
+     end Testimonials --> 
 
 
  
