More changes to structure,including Vahram

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 			  <div class="collapse navbar-collapse navbar-ex1-collapse nb np">
 			    <ul class="nav navbar-nav">
 			      <li><a href="#slider" class="anchor">About</a></li>
-			      <li><a href="#features" class="anchor">Apply</a></li>
+			      <li><a href="#features" class="anchor">features</a></li>
+			      <li><a href="#download" class="anchor">Apply</a></li>
 			      <li><a href="#pricing" class="anchor">Pricing</a></li>
 			      <li><a href="#myModal" data-toggle="modal">Contact</a></li>
 	
@@ -117,13 +118,7 @@
 				<div class="col-sm-5">
 					<h1>Get packages that don't ship to your country!</h1>
 					<p></p>
-					<!--<form  id="newsletter" action="newsletter.php" class="form-inline" role="form">
-					  <div class="form-group">
-					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-					    <input type="email" name="email" class="form-control" id="exampleInputEmail2" placeholder="Enter your email">
-					  	<button type="submit" class="btn">submit</button>
-					  </div>
-					</form>-->
+					
 				</div>
 				<div class="col-sm-7">
 					<img src="img/big-hand.png" class="img-responsive main" alt="/" />
@@ -139,46 +134,23 @@
         	<div class="row">
         		<div class="col-sm-4 from-left">
 					<div class="item">
-						<div class="img-circle"><i class="icon-cog img-circle"></i></div>
-						<h3>Robust Toolset</h3>
-						<p>Check out our super awesome and mega cool mobile app. We promise you tons of fun and hours of tappingorem ipsum dolor sit amet.</p>
+						<div class="img-circle"><img src="./img/left.png"/ alt="desktop"/></div>
+						<h3>Order Online</h3>
+						<p>Shop online at your favorite store. When you check-out, use the U.S. address we provide.</p>
 					</div>
 				</div>
         		<div class="col-sm-4 bottom">
 					<div class="item">
-						<div class="img-circle "><i class="icon-cloud img-circle"></i></div>
-						<h3>Robust Toolset</h3>
-						<p>Check out our super awesome and mega cool mobile app. We promise you tons of fun and hours of tappingorem ipsum dolor sit amet.</p>
+						<div class="img-circle "><img src="./img/middle.png"/ alt="house"/></div>
+						<h3>Get Your Package</h3>
+						<p>We handle shipping and logistics, while you sit back and relax!</p>
 					</div>
 				</div>
         		<div class="col-sm-4 from-right">
 					<div class="item">
-						<div class="img-circle"><i class="icon-clock img-circle"></i></div>
-						<h3>Robust Toolset</h3>
-						<p>Check out our super awesome and mega cool mobile app. We promise you tons of fun and hours of tappingorem ipsum dolor sit amet.</p>
-					</div>
-				</div>
-        	</div>
-        	<div class="row">
-        		<div class="col-sm-4 from-left">
-					<div class="item">
-						<div class="img-circle"><i class="icon-cog img-circle"></i></div>
-						<h3>Robust Toolset</h3>
-						<p>Check out our super awesome and mega cool mobile app. We promise you tons of fun and hours of tappingorem ipsum dolor sit amet.</p>
-					</div>
-				</div>
-        		<div class="col-sm-4 bottom">
-					<div class="item">
-						<div class="img-circle"><i class="icon-cloud img-circle"></i></div>
-						<h3 class="armata">Robust Toolset</h3>
-						<p>Check out our super awesome and mega cool mobile app. We promise you tons of fun and hours of tappingorem ipsum dolor sit amet.</p>
-					</div>
-				</div>
-        		<div class="col-sm-4 from-right">
-					<div class="item">
-						<div class="img-circle"><i class="icon-camera img-circle"></i></div>
-						<h3>Robust Toolset</h3>
-						<p>Check out our super awesome and mega cool mobile app. We promise you tons of fun and hours of tappingorem ipsum dolor sit amet.</p>
+						<div class="img-circle"><img src="./img/right.png" alt="smiley"/></div>
+						<h3>Review</h3>
+						<p>We welcome your feedback to continuously enhance our service!</p>
 					</div>
 				</div>
         	</div>
@@ -202,14 +174,21 @@
 							</div>
 			        		<div class="col-sm-7 from-right">
 			        			<div class="rotator">
-				                    <div class="front card">
+			        				<form  id="newsletter" action="newsletter.php" class="form-inline" role="form">
+					  <div class="form-group">
+					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
+					    <input type="email" name="email" class="form-control" id="exampleInputEmail2" placeholder="Enter your email">
+					  	<button type="submit" class="btn">submit</button>
+					  </div>
+					</form>
+				                    <!--<div class="front card">
 				                        <img class="img-responsive" src="img/img-download-iphone-1.png" alt="Mockup iPhone Two Image">
 				                    </div>
 				                    <div class="back card">
 				                        <img class="img-responsive" src="img/img-download-iphone-2.png" alt="Mockup iPhone Image" >
 				                    </div>
 				                </div>
-								<!-- <img src="img/img-download-iphone.png" alt="/" class="img-responsive img-rotate" />  -->
+								<img src="img/img-download-iphone.png" alt="/" class="img-responsive img-rotate" />  -->
 							</div>
 			        	</div>
 				    </div>			
@@ -272,7 +251,7 @@
 				</div>
         		<div class="col-sm-5 col-offset-1 from-right">
 					
-					<!--<div class="panel-group" id="accordion">
+					<div class="panel-group" id="accordion">
 					  <div class="panel panel-default nm nbBot">
 					    <div class="panel-heading">
 					      <h4 class="panel-title">
