--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
 			        		<div class="col-sm-7 from-right">
 			        			<div class="rotator">
 			        				<form  id="newsletter" action="newsletter.php" class="form-inline" role="form">
-					  <div class="form-group">
+					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
 					    <input type="email" name="email" class="form-control" id="exampleInputEmail2" placeholder="Enter your email">
-					  	<button type="submit" class="btn">submit</button>
+					  	<button type="submit" class="btn">APPLY</button>
 					  </div>
-					</form>
+					</form></div>
 				                    <!--<div class="front card">
 				                        <img class="img-responsive" src="img/img-download-iphone-1.png" alt="Mockup iPhone Two Image">
 				                    </div>
@@ -212,7 +212,7 @@
                     <li class="title nb">Pay per package</li>
                     <li class="price nb">$15/package plus shipping</li>
                     <li>Regular shipping rates apply</li>
-                    <li><a href="#">Click for more info!</a></li>
+                    <!--<li><a href="#">Click for more info!</a></li>-->
                   </ul>
                 </div>                
                 <div class="col-sm-4 bottom">
@@ -221,7 +221,7 @@
                     <li class="price nb">$30/month plus shipping</li>
                     <li>15% off shipping rates</li>
                     
-                    <li><a href="#">Click for more info!</a></li>
+                    <!--<li><a href="#">Click for more info!</a></li>-->
                   </ul>
                 </div>                
                 <div class="col-sm-4 from-right">
@@ -230,7 +230,7 @@
                     <li class="price nb">$60/month plus shipping</li>
                     <li>20% off shipping rates</li>
                     
-                    <li><a href="#">Click for more info!</a></li>
+                    <!--<li><a href="#">Click for more info!</a></li>-->
                   </ul>
                 </div>
         	</div>
