--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			  <div class="collapse navbar-collapse navbar-ex1-collapse nb np">
 			    <ul class="nav navbar-nav">
 			      <li><a href="#slider" class="anchor">About</a></li>
-			      <li><a href="#features" class="anchor">features</a></li>
+			      <li><a href="#features" class="anchor">Features</a></li>
 			      <li><a href="#download" class="anchor">Apply</a></li>
 			      <li><a href="#pricing" class="anchor">Pricing</a></li>
 			      <li><a href="#myModal" data-toggle="modal">Contact</a></li>
