--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
         	<div class="row">
         		<div class="col-sm-4 from-left">
 					<div class="item">
-						<div class="img-circle"><img src="/img/left.PNG"/ class="img-spinfix" alt="desktop"/></div>
+						<div class="img-circle"><img src="/img/left.PNG" class="img-spinfix" alt="desktop"/></div>
 						<h3>Order Online</h3>
 						<p>Shop online at your favorite store. When you check-out, use the U.S. address we provide.</p>
 					</div>
 				</div>
         		<div class="col-sm-4 bottom">
 					<div class="item">
-						<div class="img-circle "><img src="/img/middle.PNG"/ class="img-spinfix" alt="house"/></div>
+						<div class="img-circle "><img src="/img/middle.PNG" class="img-spinfix" alt="house"/></div>
 						<h3>Get Your Package</h3>
 						<p>We handle shipping and logistics, while you sit back and relax!</p>
 					</div>
