adjust apply field 1

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				<div class="carousel-inner">
 				    <div class="item active">
 				       	<div class="row">
-			        		<div class="col-sm-12 col-sm-offset-3 text-center from-right"><div class="col-sm-6 text-center">
+			        		<div class="col-sm-12 text-center from-right">
 			        			<h2 style="color: #ffffff;  margin-bottom: -0.3em; font-size: 5em; text-transform: uppercase; ">Apply</h2>
 			        			<div class="rotator">
 
@@ -178,7 +178,7 @@
 					  	<button type="submit" class="btn" style="padding: 2px; width: 136px;
 ">SUBMIT</button>
 					  </div>
-					</form></div></div>
+					</form></div>
 				                    <!--<div class="front card">
 				                        <img class="img-responsive" src="img/img-download-iphone-1.png" alt="Mockup iPhone Two Image">
 				                    </div>
