adjusted apply field on mobile

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				<div class="carousel-inner">
 				    <div class="item active">
 				       	<div class="row">
-			        		<div class="col-sm-12 text-center from-right">
+			        		<div class="col-sm-12 col-sm-offset-3 text-center from-right"><div class="col-sm-6 text-center">
 			        			<h2 style="color: #ffffff;  margin-bottom: -0.3em; font-size: 5em; text-transform: uppercase; ">Apply</h2>
 			        			<div class="rotator">
 
@@ -175,10 +175,12 @@
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
 					    <input type="email" name="email" class="form-control" id="exampleInputEmail2" placeholder="Enter your email">
-					  	<button type="submit" class="btn" style="padding: 2px; width: 136px;
+					  	<button type="submit" class="btn" style="
+    padding: 2px;
+    width: 136px;
 ">SUBMIT</button>
 					  </div>
-					</form></div>
+					</form></div></div>
 				                    <!--<div class="front card">
 				                        <img class="img-responsive" src="img/img-download-iphone-1.png" alt="Mockup iPhone Two Image">
 				                    </div>
