fixed spinning icons

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </style>
   </head>
   <body>
-  	
+  	<div id="top"></div>
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
@@ -99,7 +99,7 @@
 			  <!-- Collect the nav links, forms, and other content for toggling -->
 			  <div class="collapse navbar-collapse navbar-ex1-collapse nb np">
 			    <ul class="nav navbar-nav">
-			      <li><a href="#slider" class="anchor">About</a></li>
+			      <li><a href="#top" class="anchor">About</a></li>
 			      <li><a href="#features" class="anchor">Features</a></li>
 			      <li><a href="#download" class="anchor">Apply</a></li>
 			      <li><a href="#pricing" class="anchor">Pricing</a></li>
