Added fb integration

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				    <div class="item active">
 				       	<div class="row">
 			        		<div class="col-sm-12 col-sm-offset-3 text-center from-right"><div class="col-sm-6 text-center">
-			        			<h2 style="color: #ffffff;  margin-bottom: -0.3em; font-size: 5em; text-transform: uppercase; ">Apply</h2>
+			        			<h2 style="color: #ffffff;  margin-bottom: -0.1em; font-size: 5em; text-transform: uppercase; ">Apply</h2>
 			        			<div class="rotator">
 
 			        				<form  id="newsletter" action="newsletter.php" class="form-inline" role="form">
@@ -187,7 +187,7 @@
     padding: 2px;
     width: 136px;
 ">SUBMIT</button>
-<label> <h3 style= "color: #ffffff;">Sign up using Facebook</h3>
+<label> <h3 style= "color: #ffffff; line-height: 30px;">Apply using Facebook</h3>
 <input type="button" id="sendBut1" value="Facebook" onClick="loginUser();" class="btn fb-btn" style="width: 100%; font-size:2em; margin-top: 10px; padding: 8px; "/></label>
 					  </div><!-- socialShare goes here -->
 							 <div id="socialShare">
@@ -336,7 +336,7 @@
 					
 					
 				</div>
-        	</div>-->
+        	</div>
         </div>
     </section>	
     <!-- end space -->
@@ -661,4 +661,6 @@
 
 
   </body>
+  <!-- Our FB JS Include Goes here-->
+  <script src="js/facebook/fb.js"></script>
 </html>
