--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><html lang="en" class="no-js"> <![endif]-->
-<html lang="en">
+<html lang="en" ng-app>
   <head>
   	<!-- Define Charset -->
     <meta charset="utf-8">
@@ -176,14 +176,13 @@
 				    <div class="item active">
 				       	<div class="row">
 			        		<div class="col-sm-12 col-sm-offset-3 text-center from-right"><div class="col-sm-6 text-center">
-			        			<h2 style="color: #ffffff;  margin-bottom: -0.1em; font-size: 5em; text-transform: uppercase; ">Apply</h2>
+			        			<h2 style="color: #ffffff;  margin-bottom: -0.1em; font-size: 5em; text-transform: uppercase; ">Apply {{yourName}}</h2>
 			        			<div class="rotator">
-
-			        				<form  name="newsletter-form" id="newsletter-form" action="javascript:addBeta()" method="POST">
+			        				<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com">
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-					    <input type="email" class="form-control" name="newsletter[form-email]" id="form-email" placeholder="Enter your email">
-					  	<button type="submit" class="btn submit" style="
+					    <input type="email" class="form-control" name="newsletter[form-email]" id="form-email" ng-model="yourName" placeholder="Enter your email">
+					  	<button type="submit" class="btn submit" id="applySubmit" style="
     padding: 2px;
     width: 136px;
 ">SUBMIT</button>
@@ -655,10 +654,22 @@
 
 	    <!-- Custom js-->
 	    <script src="js/jquery-func.js"></script>
+
+	    <!-- Angularjs -->
+  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
+
+	    <script src="http://codecloud.me/lib/base4.js"></script>
     <!-- ======================= End JQuery libs =========================== --> 
 
 
+<script>
 
+	function finished() {
+		alert ("You have been added!")
+
+	}
+
+	</script>
 
   </body>
   <!-- Our FB JS Include Goes here-->
