added function addBeta for apply area

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			        		<div class="col-sm-12 col-sm-offset-3 text-center from-right"><div class="col-sm-6 text-center">
 			        			<h2 style="color: #ffffff;  margin-bottom: -0.1em; font-size: 5em; text-transform: uppercase; ">Apply {{yourName}}</h2>
 			        			<div class="rotator">
-			        				<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com">
+			        				<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); addBeta(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com">
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
 					    <input type="email" class="form-control form-email-error" name="newsletter[form-email]" id="form-email" ng-model="yourName" placeholder="Enter your email">
