tweaked social apply button to switch text when using facebook

--- a/index.html
+++ b/index.html
@@ -182,10 +182,7 @@
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
 					    <input type="email" class="form-control form-email-error" name="newsletter[form-email]" id="form-email" ng-model="yourName" placeholder="Enter your email">
-					  	<button type="submit" class="btn submit" id="sendBut" style="
-    padding: 2px;
-    width: 136px;
-">SUBMIT</button>
+					    <input type="submit" id="sendBut" value="Submit" class="btn submit" style="width:136px;"/>
 <label> <h3 style= "color: #ffffff; line-height: 30px;">Apply using Facebook</h3>
 <input type="button" id="sendBut1" value="Facebook" onClick="loginUser();" class="btn fb-btn" style="width: 100%; font-size:2em; margin-top: 10px; padding: 8px; "/></label>
 					  </div><!-- socialShare goes here -->
@@ -197,7 +194,7 @@
 
 
 									<!--facebook share button -->
-									<div class="fb-share-button" data-href="https://skyfall.club" data-type="button" style="margin-top:20px"></div>
+									<div class="fb-share-button" data-href="https://skyfall.club" data-type="button" style="margin-top:5px"></div>
 									
 									<!--end facebook share button-->
 
