--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 									<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 									<!--facebook share button -->
-									<div class="fb-share-button" data-href="https://skyfall.club" data-type="button"></div>
+									<div class="fb-share-button" data-href="https://skyfall.club" data-type="button" style="display: inline-flex;"></div>
 									
 									<!--end facebook share button-->
 
