tweaked init js to remove fb message and button

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			#socialShare{
 
 				display:none;
+				margin-top: 10px;
 			}
 
 		</style>
@@ -183,7 +184,7 @@
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
 					    <input type="email" class="form-control form-email-error" name="newsletter[form-email]" id="form-email" ng-model="yourName" placeholder="Enter your email">
 					    <input type="submit" id="sendBut" value="Submit" class="btn submit" style="width:136px;"/>
-<label> <h3 style= "color: #ffffff; line-height: 30px;">Apply using Facebook</h3>
+<label> <h3 id="fbApplyMessage" style= "color: #ffffff; line-height: 30px;">Apply using Facebook</h3>
 <input type="button" id="sendBut1" value="Facebook" onClick="loginUser();" class="btn fb-btn" style="width: 100%; font-size:2em; margin-top: 10px; padding: 8px; "/></label>
 					  </div><!-- socialShare goes here -->
 							 <div id="socialShare">
