added tracking code for mouse flow

--- a/index.html
+++ b/index.html
@@ -674,7 +674,14 @@
 	}
 
 	</script>
-
+ <script type="text/javascript">
+        var _mfq = _mfq || [];
+        (function () {
+        var mf = document.createElement("script"); mf.type = "text/javascript"; mf.async = true;
+        mf.src = "//cdn.mouseflow.com/projects/8c9282ae-ce65-429c-a7bf-a2af2440c032.js";
+        document.getElementsByTagName("head")[0].appendChild(mf);
+      })();
+    </script>
   </body>
   <!-- Our FB JS Include Goes here-->
   <script src="js/facebook/fb.js"></script>
