fixed script controlling the top subscribe area and the bottom, added second ids

--- a/index.html
+++ b/index.html
@@ -153,21 +153,21 @@
         	<div class="row">
         		<div class="col-sm-4 from-left">
 					<div class="item">
-						<div class="img-circle"><img src="/img/left.PNG" class="img-spinfix" alt="desktop"/></div>
+						<div class="img-circle"><img src="img/left.PNG" class="img-spinfix" alt="desktop"/></div>
 						<h3>Order Online</h3>
 						<p>Shop online at your favorite store. When you check-out, use the U.S. address we provide.</p>
 					</div>
 				</div>
         		<div class="col-sm-4 bottom">
 					<div class="item">
-						<div class="img-circle "><img src="/img/middle.PNG" class="img-spinfix" alt="house"/></div>
+						<div class="img-circle "><img src="img/middle.PNG" class="img-spinfix" alt="house"/></div>
 						<h3>Get Your Package</h3>
 						<p>We handle shipping and logistics, while you sit back and relax!</p>
 					</div>
 				</div>
         		<div class="col-sm-4 from-right">
 					<div class="item">
-						<div class="img-circle"><img src="/img/right.PNG" class="img-spinfix" alt="smiley"/></div>
+						<div class="img-circle"><img src="img/right.PNG" class="img-spinfix" alt="smiley"/></div>
 						<h3>Review</h3>
 						<p>We welcome your feedback to continuously enhance our service!</p>
 					</div>
@@ -194,7 +194,7 @@
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
 					    <input type="email" class="form-control form-email-error" name="newsletter[form-email]" id="form-email" ng-model="yourName" placeholder="Your email address">
-					    <input type="submit" id="sendBut" value="Submit" class="btn submit" style="width:136px;"/>
+					    <input type="submit" id="sendButBtm" value="Submit" class="btn submit" style="width:136px;"/>
 <label> <h3 id="fbApplyMessage" style= "color: #ffffff; line-height: 30px;">Sign up using Facebook, and earn bonus discounts at launch</h3>
 <input type="button" id="sendBut1" value="Facebook" onClick="loginUser();" class="btn fb-btn" style="width: 100%; font-size:2em; margin-top: 10px; padding: 8px; "/></label>
 					  </div><!-- socialShare goes here -->
