--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 					<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); addBeta(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com" style="margin-bottom: 125px">
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-					    <input type="email" class="form-control form-email-error" name="newsletter[form-email]" id="form-email" ng-model="yourName" placeholder="Your email address">
-					    <input type="submit" id="sendBut" value="Submit" class="btn submit" style="width:136px;"/>
+					    <input type="email" class="form-control form-email-error" name="newsletter[form-emailTop]" id="form-emailTop" placeholder="Your email address">
+					    <input type="submit" id="sendButTop" value="Submit" class="btn submit" style="width:136px;"/>
 					   
 					  </div>
 							
@@ -193,8 +193,8 @@
 			        				<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); addBeta(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com">
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-					    <input type="email" class="form-control form-email-error" name="newsletter[form-email]" id="form-email" ng-model="yourName" placeholder="Your email address">
-					    <input type="submit" id="sendButBtm" value="Submit" class="btn submit" style="width:136px;"/>
+					    <input type="email" class="form-control form-email-error" name="newsletter[form-email]" id="form-email" placeholder="Your email address">
+					    <input type="submit" id="sendBut" value="Submit" class="btn submit" style="width:136px;"/>
 <label> <h3 id="fbApplyMessage" style= "color: #ffffff; line-height: 30px;">Sign up using Facebook, and earn bonus discounts at launch</h3>
 <input type="button" id="sendBut1" value="Facebook" onClick="loginUser();" class="btn fb-btn" style="width: 100%; font-size:2em; margin-top: 10px; padding: 8px; "/></label>
 					  </div><!-- socialShare goes here -->
