fixed issue in index, didnt have addBetaTop for appropriate field

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<h1>Get packages that don't ship to your country!</h1>
 					<p style="line-height: 28px; margin-bottom:25px;">Get a <strong>FREE</strong> U.S. address to forward your packages to. Once received your package will be shipped overnight to anywhere you want. It really is just that simple!</p>
 
-					<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); addBeta(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com" style="margin-bottom: 125px">
+					<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); addBetaTop(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com" style="margin-bottom: 125px">
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
 					    <input type="email" class="form-control form-email-error" name="newsletter[form-emailTop]" id="form-emailTop" placeholder="Your email address">
