--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 					<h1>Get packages that don't ship to your country!</h1>
 					<p style="line-height: 28px; margin-bottom:25px;">Get a <strong>FREE</strong> U.S. address to forward your packages to. Once received your package will be shipped overnight to anywhere you want. It really is just that simple!</p>
 
-					<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); addBeta(); addBetaTop(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com" style="margin-bottom: 125px">
+					<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); addBetaTop(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com" style="margin-bottom: 125px">
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-					    <input type="email" class="form-control form-email-error" name="newsletter[form-emailTop]" id="form-emailTop" placeholder="Your email address">
+					    <input type="email" class="form-control form-email-error" name="newsletter[form-emailTop]" id="form-email" placeholder="Your email address">
 					    <input type="submit" id="sendButTop" value="Submit" class="btn submit" style="width:136px;"/>
 					   
 					  </div>
@@ -190,7 +190,7 @@
 			        			<h2 style="color: #ffffff;  margin-bottom: -0.1em; font-size: 5em; text-transform: uppercase; ">Join the Beta</h2>
 			        			<p style="line-height: 21px; margin: 4px 0 0; color: #ffffff; font-size: 16px;">get a single package sent for free.</p>
 			        			<div class="rotator">
-			        				<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); addBeta(); addBetaTop(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com">
+			        				<form  name="newsletter-form" id="newsletter-form" action="javascript:go1(); addBeta(); finished()" method="POST" class="form-inline base4" email="skyclubcoders@gmail.com">
 					  <div class="slider"><div class="form-group">
 					    <label class="sr-only" for="exampleInputEmail2">Email address</label>
 					    <input type="email" class="form-control form-email-error" name="newsletter[form-email]" id="form-email" placeholder="Your email address">
